# sandbox_rs

./: .drone.yml  .gitlab-ci.yml  Cargo.toml
assets/: Sprite-0001.json  triangle.frag
assets/shader/fragment/: normal_mapping.frag  skybox.frag  triangle.frag
assets/shader/vertex/: skybox.vert  sprite_sheet.vert  triangle.vert
docker/: Dockerfile
engine/: Cargo.toml
engine/src/: camera.rs  handle_event.rs  imgui_wrap.rs  lib.rs  load.rs  mesh.rs  render_info.rs  sample_3d.rs  skybox.rs  traits.rs  window.rs  world.rs  world_manager.rs
engine/src/component/: camera.rs  entity_render_info.rs  event.rs  imgui.rs  mod.rs
engine/src/reader_json/: sprite_sheet.rs
engine/src/resources/: mod.rs  sprite_sheet.rs  window.rs
engine/src/sample/: base.rs  mod.rs  sample_3d.rs
engine/src/sample/sample_2d/: plane.rs
engine/src/system/: draw.rs  event.rs
engine/src/traits/: mod.rs  uniforms.rs
glish_rs/: Cargo.toml
glish_rs/src/: buffer.rs  lib.rs  program.rs  shader.rs  texture.rs  uniform.rs  utils.rs
sample/: Cargo.toml
sample/src/: debug_gui.rs  imgui_wrap.rs  load.rs  main.rs  skybox.rs  traits.rs  window.rs
