[package]
name = "glish_rs"
version = "0.1.0"
authors = ["joeBlinx <aiglestiven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34", features = ["image"]}
gl = "0.14"
nalgebra-glm = "0.7"
nalgebra = "0.21"