[package]
name = "sample"
version = "0.1.0"
authors = ["joeBlinx <aiglestiven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj-rs = "0.6"
gl = "0.14"
sdl2 = { version = "0.34"}
rand = "0.7"
nalgebra-glm = "0.7"
nalgebra = "0.21"
glish_rs = {path = "../glish_rs"}
